2017-03-21  Bruno Haible  <bruno@clisp.org>

	Replace the 'newer' utility with a portable shell alternative.
	Jörg Höhle found that "newer $file1 $file2" is equivalent to
	test -f $file1 && \
	  { test ! -f $file2 || test -n "`find $file1 -prune -newer $file2`"; }
	* src/makemake.in (UTILS): Remove 'newer'.
	Use a 'find' based shell command instead of the 'newer' program.
	* utils/newer.c: Remove file.
	* Makefile.devel (GNULIB_CORE): Remove stat-time, timespec.
	* gllib/*: Update from gnulib.
	* glm4/*: Likewise.
	* gllib/Makefile.am, gllib/Makefile.in: Regenerated.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.
	* build-aux/config.sub: Update from gnulib git.

2017-03-20  Bruno Haible  <bruno@clisp.org>

	Fix "End of comment outside comment" warnings from varbrace.
	* utils/varbrace.c (enum parsing_state): New type.
	(parsing_state_at_end_of_line): New function.
	(next_token): Continue reading more lines for a preprocessor
	line that ends within a C style comment.

2017-03-20  Sam Steingold  <sds@gnu.org>

	Fix non-blocking sockets on Mac OS X.
	* unix.d (NO_BLOCK_DECL): Do not accept handle.
	(START_NO_BLOCK): Accept on_fail, move function call from
	NO_BLOCK_DECL here.
	(END_NO_BLOCK): Accept on_fail.
	* win32.d (NO_BLOCK_DECL, START_NO_BLOCK, END_NO_BLOCK): Add.
	* socket.d (connect_via_ip): Use
	NO_BLOCK_DECL/START_NO_BLOCK/END_NO_BLOCK.
	* stream.d (listen_handle): Update the use of
	NO_BLOCK_DECL/START_NO_BLOCK/END_NO_BLOCK.
	* unixaux.d (fd_read, fd_write, sock_write): Ditto.
	Reported by Karsten Poeck <Karsten.Poeck@gmail.com>.

2017-03-20  Reini Urban  <reini.urban@gmail.com>
            Bruno Haible  <bruno@clisp.org>

	Fix text file processing Makefile rules for parallel make.
	* makemake.in (TXT_FILES): Use a different temporary file for each
	target file.

2017-03-20  Reini Urban  <reini.urban@gmail.com>
            Bruno Haible  <bruno@clisp.org>

	Fix intparam.h/floatparam.h Makefile rule for parallel make.